--- a/frontend/src/styles/sidebar.scss
+++ b/frontend/src/styles/sidebar.scss
@@ -25,7 +25,7 @@
     align-items: left;
     transition: $transition-style;
     &:hover {
-        background-color: #dadada;
+        background-color: $but-hover-bc;
         transition: $transition-style;
     }
     p {
